Spacing issues fix for footer

--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,10 @@ body{
     font-size: 14px;
     font-weight: 400;
 }
-
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+    padding-left: 30px;
+    padding-right: 30px;
+}
 .title {
     font-family: "Raleway", sans-serif;
     font-size: 33px;
@@ -79,8 +82,21 @@ a, a:hover, a:focus {
     vertical-align: top;
 }
 
+p {
+    line-height: 24px;
+    margin: 0 0 24px;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
 footer{
 
+}
+
+footer .row:first-of-type {
+    margin-bottom: 40px;
 }
 
 .clickEinstein-footer{
@@ -171,6 +187,8 @@ footer{
     margin: 0;
 }
 
+
+
 .col-xs-6.clickEinstein-footer-menu {
     padding-top: 41px;
     text-align: center;
@@ -205,4 +223,8 @@ footer{
 
 footer .col-xs-12 {
     text-align: center;
+}
+
+.fbstart {
+    padding-top: 15px;
 }
